--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "content-snippets",
+  "name": "content-snippets-edit",
   "version": "0.0.1",
   "ignore": [
     "**/.*",
@@ -7,12 +7,7 @@
     "components"
   ],
   "dependencies": {
-    "riot": "~2.0.15",
-    "q": "~1.3.0",
-    "qajax": "git@github.com:cb-talent-development/qajax#master",
-    "underscore": "1.8.3"
-  },
-  "resolutions": {
-    "q": "~1.3.0"
+    "materialize": "~0.97",
+    "normalize-scss": "~3.0"
   }
 }
