--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "content-snippets-edit",
   "version": "0.0.1",
-  "description": "A tool to enable in-page editing of elements, with an adaptable content backend",
+  "description": "A tool to enable in-page editing of elements with Cortex as a backend",
   "author": "CB Content Enablement Product Team <ContentEnablementProductTeam@careerbuilder.com>",
   "license": "Apache-2.0",
   "repository": "git://github.com/cortex-cms/content-snippets-edit.git",
