Combine view and edit libs into one, refactor

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 #
+# API Configuration
+#
+API_BASE=http://admin.cbcortex.com/api/v1
+
+#
 # Asset Configuration
 #
 CONTENT_SNIPPETS_EDIT_CSS_URL=https://s3.amazonaws.com/cortex-content-snippets/content-snippets-edit.css
-CKEDITOR_PLUGINS_URL=http://stg.admin.cbcortex.com/ckeditor-plugins/
+CKEDITOR_PLUGINS_URL=http://admin.cbcortex.com/ckeditor-plugins/
